--- a/jblog03/src/main/webapp/assets/css/jblog.css
+++ b/jblog03/src/main/webapp/assets/css/jblog.css
@@ -14,7 +14,7 @@ a:hover 		{ color:#dc143c; text-decoration:none; font-weight:bold; }
 
 .center-content	{ width:500px; margin:120px auto 50px auto}
 
-.center-content .logo							{ width:163px; height:104px; background:url(/jblog03/assets/images/logo.jpg) 0 0 no-repeat; margin:20px auto; text-indent:-100000px; font-size:0 }
+.center-content .logo						    { width:163px; height:104px; background:url(/jblog03/assets/images/logo.jpg) 0 0 no-repeat; margin:20px auto; text-indent:-100000px; font-size:0 }
 .center-content .menu							{ text-align:center; height:20px; margin:0 auto }
 .center-content .menu li						{ display:inline; padding-left:20px }
 .center-content .menu li:first-child			{ margin-left:70px }
@@ -31,6 +31,7 @@ a:hover 		{ color:#dc143c; text-decoration:none; font-weight:bold; }
 .login-form input, .login-form label			{ display:block }
 .login-form label								{ text-align:left; color:#555; margin-bottom:2px; font-weight:bold; }
 .login-form input[type='text']					{ margin-bottom:10px; width:230px; padding:5px }
+.login-form input[type='password']				{ margin-bottom:10px; width:230px; padding:5px }
 
 .join-form										{ text-align:left; width:250px; padding:10px; border:1px solid #bbb; }
 .join-form label, .join-form fieldset legend	{ color:#555; margin-bottom:2px; font-weight:bold; }
@@ -116,8 +117,8 @@ div#navigation ul a						{ font-weight:normal }
 
 /* extra */
 div#extra					{ background-color:#F9F9F9 }
-div#extra .blog-logo		{ margin:0 0 0 10px }
-div#extra .blog-logo img	{ width:150px }
+div#extra .blog-profile		{ margin:0 0 0 10px }
+div#extra .blog-profile img	{ width:100px }
 
 /* footer */
 div#footer		{ background:#F0F0F0; color:#666 }
